fix: notification icon alignment

--- a/src/components/reusable/notification/notification.scss
+++ b/src/components/reusable/notification/notification.scss
@@ -112,7 +112,6 @@ kyn-card.notification-normal::part(card-wrapper) {
   }
 
   &-state-icon {
-    margin-top: -2px;
     padding-right: 8px;
   }
 
@@ -143,7 +142,11 @@ kyn-card.notification-normal::part(card-wrapper) {
 .notification-inline .notification-head,
 .notification-toast .notification-head {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+}
+
+.notification-inline .notification-state-icon {
+  align-self: flex-start;
 }
 
 .notification-toast .notification-title-wrap {
@@ -155,7 +158,6 @@ kyn-card.notification-normal::part(card-wrapper) {
 }
 
 .notification-toast .notification-state-icon {
-  padding-top: 3px;
   padding-right: 8px;
   align-self: flex-start;
 }
